[package]
name = "peerFinder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["http1", "http2"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
reqwest = { version = "0.11.24", features = ["json"] }
clap = { version = "4.5.1", features = ["derive", "env"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
thiserror = "1.0.57"
futures = "0.3.30"
tokio-util = "0.7.10"
parking_lot = "0.12.1"
hyper = { version = "0.14.27", features = ["server", "http1", "tcp"] }
